--- a/code/templates/layout/base.html
+++ b/code/templates/layout/base.html
@@ -22,7 +22,7 @@
 
     <body>
         <header>
-            <!-- place navbar here -->
+            {% include "menu.html" %}
         </header>
         <main>
             {% block content %}{% endblock %}
