--- a/code/templates/addjob.html
+++ b/code/templates/addjob.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <h1>Add Job</h1>
-  <form action="/submit_job" method="post">
+  <form  method="post">
     <label for="jobTitle">Job Title:</label><br>
     <input type="text" id="jobTitle" name="jobTitle" required><br>
     <label for="jobDescription">Job Description:</label><br>
