--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -1,7 +1,11 @@
 {% extends 'layout/base.html' %}
 
+{% block css %}
+
+{% endblock %}
+
 {% block content %}
-<h1>resume recommendation</h1>
+
 {% endblock %}
 
 
