--- a/code/templates/menu.html
+++ b/code/templates/menu.html
@@ -1,17 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="/">EXP</a>
-    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId"
-        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active fs-4" href="/" aria-current="page">Home <span
-                        class="visually-hidden">(current)</span></a>
-            </li>
-            <li class="nav-item"><a href="/login" class="nav-link fs-4">Login</a></li>
-            <li class="nav-item"><a href="/register" class="nav-link fs-4">Register</a></li>
-            <li class="nav-item"><a href="/job/add" class="nav-link fs-4">add job</a></li>
-            <li class="nav-item"><a href="/resume/add" class="nav-link fs-4">add resume</a></li>
-        </ul>
+<link rel="stylesheet" href="/static/styles1.css">
+<nav>
+    <img src="" alt="">
+    <div id="logo">
+        <h1>Resume Analyser</h1>
+    </div>
+    <div id="shape">   
+    </div>
+    <div id="nav-part2">
+        <h4><a href="#">Home</a></h4>
+        <h4><a href="/login">login</a></h4>
+        <h4><a href="/register">register</a></h4>
+        <h4><a href="job/add">addjob</a></h4>
+        <h4><a href="resume/add">addresume</a></h4>
     </div>
 </nav>
