--- a/code/templates/login.html
+++ b/code/templates/login.html
@@ -1,11 +1,22 @@
-{% extends 'layout/base.html' %}
-{% block content %}
-<h1>Login</h1>
-<form method="post">
-    <input type="email" name="email" id="email" placeholder="email">
-    <input type="pasword"name="password" id="password" placeholder="password">
-    <button>register</button>
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="/static/login.css">
+</head>
+<body>
+    <div class="container">
+        <div class="login-form">
+            <h2>Login</h2>
+            <form action="#">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
 
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
 
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
