--- a/code/templates/addresume.html
+++ b/code/templates/addresume.html
@@ -19,7 +19,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body pdfcard">
-                    <form action="/submit_resume" method="post" enctype="multipart/form-data">
+                    <form method="post" enctype="multipart/form-data">
                         <input type="hidden" name="formtype" value="pdf">
                         <div class="mb-3 input-group">
                             <input type="file" class="form-control" name="pdffile" id="pdffile" placeholder="pdffile"
