--- a/code/templates/addresume.html
+++ b/code/templates/addresume.html
@@ -33,20 +33,41 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <!-- display saved data -->
+        <div class="col-md-8">
             <div class="card">
-                <div class="card-body doccard">
-                    <form action="/submit_resume" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="formtype" value="doc">
-                        <div class="mb-3 input-group">
-                            <input type="file" class="form-control" name="docfile" id="docfile" placeholder="docfile"
-                                aria-describedby="pdffileHelpId" />
-                            <button type="submit" class="btn btn-primary">
-                                Upload
-                            </button>
-                        </div>
-                        <div id="pdffileHelpId" class="form-text">Only upload a valid doc file</div>
-                    </form>
+                <div class="card-body">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>id</th>
+                                <th>filename</th>
+                                <th>created</th>
+                                <th>action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% if resumes %}
+                            {% for resume in resumes %}
+                            <tr>
+                                <td>{{ resume.id }}</td>
+                                <td>
+                                    <a href="/{{ resume.path }}" target="_blank">{{resume.path}}</a>
+                                </td>
+                                <td>{{ resume.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                <td>
+                                    <a href="/resume/view/{{ resume.id }}" class="btn btn-primary">View</a>
+                                    <a href="/resume/delete/{{ resume.id }}" class="btn btn-danger">Delete</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            {% else %}
+                            <tr>
+                                <td colspan="4">No data found</td>
+                            </tr>
+                            {% endif %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
